# finance-pi

./: .gitignore  CLAUDE.md  README.md  finance-pi-pi-setup.md
app/: Dockerfile  pyproject.toml
app/sql/: 001_init.sql  002_seed_rules.sql
app/src/: bootstrap_eb.py  car_tracker.py  categorizer.py  consent_check.py  dashboard.py  db.py  enable_banking.py  gbi_sparen.py  manual_assets.py  manual_import.py  models.py  notifier.py  orchestrator.py  prices.py  trade_republic.py
compose/: docker-compose.yml
design/: README.md  mockups.md  tokens.css
docs/: adding-a-bank.md  requirements-coverage.md  setup.md  troubleshooting.md
scripts/: backup.sh  finance-sync.service  finance-sync.timer  launch-dashboard.sh  setup-pi.sh
