[project]
name = "finance-pi"
version = "0.2.0"
description = "Self-hosted personal finance on Raspberry Pi 5"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "cryptography>=43.0",
    "python-telegram-bot>=21.5",
    "streamlit>=1.36",
    "pandas>=2.2",
    "plotly>=5.22",
    "yfinance>=0.2.40",
    "pytr>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"
